syntax = "proto3";

package server;

import "google/protobuf/empty.proto";

option go_package = "protos/service";


service Service {
    rpc NotifyServer(NotifyServerRequest) returns (google.protobuf.Empty) {}
    rpc Join(JoinRequest) returns (google.protobuf.Empty) {}
    rpc CheckCode(CheckCodeRequest) returns (google.protobuf.Empty) {}
}

message CheckCodeRequest {
    string code = 1;
    string username = 2;
}

message NotifyServerRequest {
    uint32 user_id = 1;
    string server_name = 2;
}

message JoinRequest {
    int64 user_id = 1;
    string ip = 2;
}

